# iee305-demo

./: Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
docs/: conf.py  index.rst
src/: main.py  satellites.py
src/iee305/: main.py  satellites.py
tests/: test_main.py  test_satellite.py
